teste para endpoint findAll da claase user resource implementado